# hybrid-transpiler

./: CMakeLists.txt  PROJECT_STATUS.md  README.md  test_parser.cpp
docs/: PARSER_IMPLEMENTATION.md
examples/: async_await.cpp  async_await_expected.go  async_await_expected.rs  ffi_example.cpp  ffi_example_go.go  ffi_example_rust.rs  inheritance.cpp  inheritance_expected.go  inheritance_expected.rs  templates.cpp  templates_expected.rs
include/: codegen.h  ffi.h  ir.h  parser.h
src/: main.cpp  transpiler.cpp
src/codegen/go/: go_codegen.cpp
src/codegen/rust/: rust_codegen.cpp
src/ffi/: ffi_analyzer.cpp
src/parser/: async_analyzer.cpp  parser.cpp  simple_cpp_parser.cpp  template_analyzer.cpp
tests/: CMakeLists.txt
